fix: add z-index

--- a/src/medium-zoom.css
+++ b/src/medium-zoom.css
@@ -5,7 +5,7 @@
   bottom: 0;
   left: 0;
   opacity: 0;
-  z-index: 9999;
+  z-index: 999999;
   transition: opacity 300ms;
   will-change: opacity;
 }
